fix: update app ID and server URLs in configuration files

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "UniAppJob",
-  "appid": "H57F2ACE4",
+  "appid": "__UNI__35B511F",
   "description": "",
   "versionName": "1.0.0",
   "versionCode": "100",
