feat: 更新微信小程序 AppID 和页面配置
- 修改微信小程序的 AppID 为 'wxc35914d15d617e20'，确保与最新的开发者账号一致。
- 在多个页面配置中添加 `enablePullDownRefresh` 属性，提升用户体验。
- 更新 `.gitignore` 文件，添加 `unpackage/` 目录以避免不必要的文件被提交。

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -83,7 +83,7 @@
   },
   "quickapp": {},
   "mp-weixin": {
-    "appid": "wxa2abb91f64032a2b",
+    "appid": "wxc35914d15d617e20",
     "setting": {
       "urlCheck": false
     },
