--- a/env/.env
+++ b/env/.env
@@ -2,7 +2,7 @@ VITE_APP_TITLE = 'uni-job - 现代化企业招聘管理平台'
 VITE_APP_PORT = 9000
 
 VITE_UNI_APPID = '__UNI__35B511F'
-VITE_WX_APPID = 'wxa2abb91f64032a2b'
+VITE_WX_APPID = 'wxc35914d15d617e20'
 
 # h5部署网站的base，配置到 manifest.config.ts 里的 h5.router.base
 VITE_APP_PUBLIC_BASE=/
